增加ip地址查询

--- a/cjw_web/cjw_admin/src/main/resources/templates/tools/tools.html
+++ b/cjw_web/cjw_admin/src/main/resources/templates/tools/tools.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>web_tools</title>
-    <script src="/js/calculate.js"></script>
+    <script type="text/javascript" src="/js/calculate.js"></script>
+    <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
 </head>
 <body>
 <div class="g-nav clearfix">
@@ -19,12 +20,12 @@
             <input type="text" default="总贷款金额" name="loan">
             <input type="text" default="贷款年限" name="years">
             <input type="text" default="利率" name="apr">
-            <button type="submit" name="计算" value="计算" onclick="submin()">
+            <button type="button" name="计算" value="计算" onclick="submint()">
         </div>
     </div>
     <div class="menu-item">
         <div class="item-hd">
-            <a>工资计算器</a>
+            <p></p>
         </div>
     </div>
     <div class="tt">
